userDB changed to neo4j and postDB impl with mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.data.mongodb.uri=mongodb+srv://twitterCloneDb:gMlV1xCtIXuObcmk@cluster0.tebmnuc.mongodb.net/twitterCloneDb
 spring.data.mongodb.database=twitterCloneDb
 
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=112212
+
 server.port=4000
