--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=112212
 
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
+
 server.port=4000
