--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 		    <version>3.0.1</version>
 		</dependency>
 		<dependency>
+		  <groupId>com.google.firebase</groupId>
+		  <artifactId>firebase-admin</artifactId>
+		  <version>9.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
